<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">notes_app</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">search notes</string>
    <string name="type_note_here">Type note here</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="note_title">Note title</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="textview">TextView</string>
    <string name="get_you_started">GET YOU STARTED</string>
    <string name="let_s">LET\'S</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="username">Username</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="email">Email</string>
    <string name="re_password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Dont have account.</string>
    <string name="register">Register</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">pick_color</string>
    <string name="color">Color</string>
    <string name="Cloudify" />
    <string name="NotesCloudy">Cloudify</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">add url</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="update">Update</string>
    <string name="complete">Complete</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation_message" />
    <string name="cancel" />
    <string name="complete_confirmation_message" />
    <string name="menuDelete" />
    <string name="menuUpdate" />
    <string name="menuComplete" />
    <string name="delete_confirmation">Confirmation</string>
    <string name="sureToDelete">Are you sure you want to delete the task</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation">Completed the task!..</string>
    <string name="sureToMarkAsComplete">Are you sure you want to mark this task as completed.</string>
    <string name="congrats_you_have_completed_the_task_successfully" tools:ignore="TypographyEllipsis">Congrats!... You have completed the task successfully..</string>
    <string name="task_status_updated">Task status updated</string>
    <string name="error_updating_status">Error updating status</string>
    <string name="error_deleting_task" />
    <string name="confirm_complete_task" />
    <string name="complete_task" />
    <string name="error_marking_task_complete" />
    <string name="error_loading_completed_tasks">Error loading completed tasks</string>
    <string name="setting" />
    <string name="theme">theme</string>
    <string name="logoutt">log out</string>
    <string name="Setting">Setting</string>
    <string name="restore">Restore</string>
    <string name="delete_permanently">Delete Permanently</string>
    <string name="task_deleted">task delete</string>
    <string name="forget">Forgot Password?</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="are_you_sure_you_want_to_delete_this_task">Are you sure you want to delete this Task?</string>
    <string name="are_you_sure_you_want_to_Logout">Are you sure you want to Logout?</string>
    <string name="admin">Admin</string>
    <string name="go_to_admin_or_workspace">Do you want to go to admin panel?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_tasks">my_tasks</string>
    <string name="user_profile_picture" />
    <string name="notes">Notes</string>
    <string name="tasks">Tasks</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="pass_res">Password Reset</string>
    <string name="edit_username_prompt">Edit Profile</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="reset">Reset</string>
    <string name="Email">Please Enter The Email Here</string>
    <string name="send">Send</string>


</resources>